Don't try to modify the worksheet when it's currently being destroyed.

BUG: 428611
FIXED-IN: 21.04